// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Validation should correctly render 'now' entity type 1`] = `
<DateValidation__StartDateText>
  The date the respondent begins the survey
</DateValidation__StartDateText>
`;

exports[`Date Validation should filter the available units for the dd/mm/yyyy 1`] = `
Array [
  "Days",
  "Months",
  "Years",
]
`;

exports[`Date Validation should filter the available units for the mm/yyyy 1`] = `
Array [
  "Months",
  "Years",
]
`;

exports[`Date Validation should filter the available units for the yyyy 1`] = `
Array [
  "Years",
]
`;

exports[`Date Validation should render 1`] = `
<div>
  <Grid
    align="top"
    fillHeight={true}
  >
    <AlignedColumn
      cols={3}
    >
      <EmphasisedText>
        foobar
         is
      </EmphasisedText>
    </AlignedColumn>
    <Column
      cols={9}
    >
      <Duration
        duration={
          Object {
            "unit": "Months",
            "value": 5,
          }
        }
        name="offset"
        onChange={[MockFunction]}
        onUpdate={[MockFunction]}
        units={
          Array [
            "Years",
          ]
        }
        value="Months"
      />
    </Column>
  </Grid>
  <Grid
    align="top"
    fillHeight={true}
  >
    <Column
      cols={3}
    >
      <DateValidation__ConnectedPath />
    </Column>
  </Grid>
  <Grid
    align="top"
    fillHeight={true}
  >
    <AlignedColumn
      cols={3}
    >
      <DateValidation__RelativePositionSelect
        data-test="relative-position-select"
        name="relativePosition"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        value="Before"
      >
        <option
          key="Before"
          value="Before"
        >
          Before
        </option>
        <option
          key="After"
          value="After"
        >
          After
        </option>
      </DateValidation__RelativePositionSelect>
      <Component />
    </AlignedColumn>
    <Column
      cols={9}
    >
      <ValidationPills
        Custom={[Function]}
        Metadata={[Function]}
        Now={[Function]}
        PreviousAnswer={[Function]}
        entityType="Custom"
        onEntityTypeChange={[MockFunction]}
      />
    </Column>
  </Grid>
</div>
`;

exports[`Date Validation should render all units for date range answers 1`] = `
Array [
  "Days",
  "Months",
  "Years",
]
`;

exports[`Date Validation should render metadata and custom for date range type answer 1`] = `
<ValidationPills
  Custom={[Function]}
  Metadata={[Function]}
  entityType="Custom"
  onEntityTypeChange={[MockFunction]}
/>
`;

exports[`Date Validation should render previous answer, metadata, custom and now for date type answer 1`] = `
<ValidationPills
  Custom={[Function]}
  Metadata={[Function]}
  Now={[Function]}
  PreviousAnswer={[Function]}
  entityType="Custom"
  onEntityTypeChange={[MockFunction]}
/>
`;
